// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentBox default visible: false, children: 1 1`] = `
.c0 {
  position: absolute;
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: undefined;
}

<div
  className="c0"
>
  <span>
    a
  </span>
</div>
`;

exports[`ContentBox default visible: true, children: 1 1`] = `
.c0 {
  position: absolute;
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: undefined;
}

<div
  className="c0"
>
  <span>
    a
  </span>
</div>
`;

exports[`ContentBox default visible: true, children: 2 1`] = `
.c0 {
  position: absolute;
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: undefined;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <span>
      a
    </span>
    <span>
      b
    </span>
  </div>
</div>
`;

exports[`ContentBox default visible:false, children: 2 1`] = `
.c0 {
  position: absolute;
  border-radius: 4px;
  box-sizing: border-box;
  left: -9999px;
  top: -9999px;
  z-index: undefined;
}

<div
  className="c0"
>
  <div
    className=""
  >
    <span>
      a
    </span>
    <span>
      b
    </span>
  </div>
</div>
`;
